set(TEMPO_LIB_TEMPO_HEADERS
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/config.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/mask.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/model.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/song.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/structures.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/time.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/Types.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentAOEIndicator.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentCombo.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentGridAi.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentHealth.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentModel.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentPickup.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentPlayerLocal.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentPlayerRemote.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentStage.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentStagePosition.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentStageRotation.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentStageTranslation.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentTransform.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/ComponentWeapon.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/component/NetworkedComponent.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/entity/EntityCreation.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/entity/EntityCreationServer.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/entity/TileMask.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/math/fft.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/network/base.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/network/queue.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/network/QueueID.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/network/server.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemCombo.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemGridAi.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemHealth.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemLevelManager.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemPlayer.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemServerAttack.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemServerPlayer.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/include/tempo/system/SystemTransform.hpp"
)

set(TEMPO_LIB_TEMPO_SOURCE
	"${CMAKE_CURRENT_LIST_DIR}/src/mask.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/model.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/song.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/structures.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/time.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentAOEIndicator.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentCombo.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentGridAi.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentHealth.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentModel.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentPickup.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentPlayerLocal.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentPlayerRemote.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentStage.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentStagePosition.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentStageRotation.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentStageTranslation.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentTransform.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/component/ComponentWeapon.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/entity/EntityCreation.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/entity/EntityCreationServer.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/entity/TileMask.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/math/fft.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/network/base.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/network/queue.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/network/QueueID.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/network/server.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemCombo.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemGridAi.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemHealth.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemLevelManager.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemPlayer.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemServerAttack.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemServerPlayer.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/src/system/SystemTransform.cpp"
)

add_library(lib_tempo STATIC
	${TEMPO_LIB_TEMPO_HEADERS}
	${TEMPO_LIB_TEMPO_SOURCE}
)

target_include_directories(lib_tempo PRIVATE ${TEMPO_LIB_TEMPO_INCLUDE_DIR})
target_include_directories(lib_tempo PRIVATE ${TEMPO_SDL2_INCLUDE_DIR})
target_include_directories(lib_tempo PRIVATE ${TEMPO_SFML_INCLUDE_DIR})
target_include_directories(lib_tempo PRIVATE ${TEMPO_ANAX_INCLUDE_DIR})
target_include_directories(lib_tempo PRIVATE ${TEMPO_GLM_INCLUDE_DIR})
